--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ fail_under = 70
 python = ">=3.6.2,<4"
 requests = "^2"
 keyring = {version = "^23.4.1", python = ">=3.6,<4", optional = true}
+aiohttp = {version = "^3.8.3", optional = true}
 
 [tool.poetry.dev-dependencies]
 black = "^21.4b2"
@@ -55,6 +56,7 @@ coverage = [
 ]
 
 [tool.poetry.extras]
+async = ["aiohttp"]
 keyring = ["keyring"]
 
 [tool.poetry.scripts]
